--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,20 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.slf4j:slf4j-simple:2.0.7'
+
+    // Example 2: If you added slf4j-simple directly or via a core module
+    implementation('org.slf4j:slf4j-simple:2.0.7') // Remove this line if you added it manually!
+
+    // Recommended Broad Exclusion (if still failing, this can force it out)
+    configurations.all {
+        exclude group: 'org.slf4j', module: 'slf4j-simple'
+    }
 
     // --- Git Operations (JGit) ---
     // The library for interacting with Git repositories
