--- a/impact-analyzer/build.gradle
+++ b/impact-analyzer/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    implementation 'org.mockito:mockito-core:5.10.0'
 }
 
 tasks.named('test') {
