Fixed the integration issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=intelli-diff
 gemini.api.key=${GEMINI_API_KEY:AIzaSyDPWo5fRvDyxVXhf2GxlpLJ5SmXVa0m-EY}
+github.token=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
+
