Refactor all classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=intelli-diff
-gemini.api.key=${GEMINI_API_KEY:AIzaSyDPWo5fRvDyxVXhf2GxlpLJ5SmXVa0m-EY}
+spring.application.name=impact-analyzer
 github.token=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
-
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
+gemini.api.key=AIzaSyBkRhbKdRYcXB8yJgOr4_AkZS1HEIZcag0
